--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
-    "start": "node sever.js"
+    "start": "node server.js"
   },
   "author": "SerenaWu",
   "license": "ISC",
